--- a/Rocksmith DLC mover/Rocksmith DLC mover.csproj
+++ b/Rocksmith DLC mover/Rocksmith DLC mover.csproj
@@ -52,8 +52,12 @@
     <Compile Include="CDLC Renamer.Designer.cs">
       <DependentUpon>CDLC Renamer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Data_Helpers\DataHelpersClass.cs" />
+    <Compile Include="Data_Helpers\FileHandling.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Extensions\RTB_Extension.cs" />
+    <Compile Include="Settings\Settings_Manager.cs" />
     <EmbeddedResource Include="CDLC Renamer.resx">
       <DependentUpon>CDLC Renamer.cs</DependentUpon>
     </EmbeddedResource>
@@ -75,6 +79,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="Readme.md" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
