Updated to Multithread backup operations in Filehander, and extended the events between the Main form and the FileHandler.

--- a/Rocksmith DLC mover/Rocksmith DLC mover.csproj
+++ b/Rocksmith DLC mover/Rocksmith DLC mover.csproj
@@ -55,6 +55,8 @@
     <Compile Include="Data_Helpers\ControlHelper.cs" />
     <Compile Include="Data_Helpers\DataHelpersClass.cs" />
     <Compile Include="Data_Helpers\FileHandling.cs" />
+    <Compile Include="Extensions\AbortAsyncEventArgs.cs" />
+    <Compile Include="Extensions\TextEventExtension.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Extensions\RTB_Extension.cs" />
